# Dynastinae

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_make.sh  external_libs.txt  features.md  install_libs.sh  make_lib.sh  run.sh  sdl_libs.txt  todo-future.md  todo.md
examples/: README.md
examples/keyboard/: Makefile  README.md  main.cpp
examples/texture/: main.cpp
examples/window/: Makefile  README.md  main.cpp
include/Dynastinae/: types.hpp
include/Dynastinae/input/: keyboard.hpp  keycode.hpp  mouse.hpp
include/Dynastinae/opengl/: ebo.hpp  shader_program.hpp  vbo.hpp
include/Dynastinae/renderers/: camera.hpp  renderer.hpp  renderer2d.hpp
include/Dynastinae/scenes/: camera.hpp  scene.hpp  scene2d.hpp  scene3d.hpp
include/Dynastinae/shapes/: mesh.hpp  shape.hpp  shape2d.hpp  shape3d.hpp
include/Dynastinae/shapes/2d/: rectangle.hpp  triangle.hpp
include/Dynastinae/shapes/3d/: cube.hpp  pyramid.hpp
include/Dynastinae/types/: audio.hpp  color.hpp  font.hpp  texture.hpp  vertex.hpp
include/Dynastinae/types/vector/: vec2.hpp  vec3.hpp  vec4.hpp  vec5.hpp  vec6.hpp
include/Dynastinae/utils/: file.hpp  log.hpp  math.hpp  sdl.hpp  string.hpp
include/Dynastinae/window/: window.hpp
include/input/: keyboard.hpp  keycode.hpp  mouse.hpp
include/opengl/: ebo.hpp  shader_program.hpp  vao.hpp  vbo.hpp
include/shapes/: baseshape.hpp  rectangle.hpp  renderer.hpp  shape.hpp  shape2d.hpp  shape3d.hpp  square.hpp  triangle.hpp
include/shapes/2d/: rectangle.hpp  renderer2d.hpp  triangle.hpp
include/shapes/3d/: cube.hpp  pyramid.hpp  renderer3d.hpp
include/shapes/renderer/: camera.hpp  renderer.hpp  renderer2d.hpp  renderer3d.hpp
include/types/: audio.hpp  color.hpp  default.hpp  font.hpp  texture.hpp  vectors.hpp
include/types/vector/: vec2.hpp  vec3.hpp  vec4.hpp  vec5.hpp  vec6.hpp
include/utils/: calc.hpp  log.hpp  sdl.hpp  shapes.hpp
include/window/: window.hpp
libs/glad/: glad.c  glad.h
src/: main.cpp  main.cpp.bak
src/input/: keyboard.cpp  mouse.cpp
src/opengl/: ebo.cpp  shader_program.cpp  vao.cpp  vbo.cpp
src/renderers/: camera.cpp  renderer.cpp  renderer2d.cpp
src/scenes/: camera.cpp  scene.cpp  scene2d.cpp  scene3d.cpp
src/shapes/: baseshape.cpp  mesh.cpp  rectangle.cpp  shape.cpp  shape2d.cpp  shape3d.cpp  square.cpp  triangle.cpp
src/shapes/2d/: rectangle.cpp  renderer2d.cpp  triangle.cpp
src/shapes/3d/: cube.cpp  pyramid.cpp  renderer3d.cpp
src/shapes/renderer/: camera.cpp  renderer.cpp  renderer2d.cpp  renderer3d.cpp
src/types/: audio.cpp  color.cpp  font.cpp  texture.cpp  vectors.cpp
src/types/vector/: vec2.cpp  vec3.cpp  vec4.cpp  vec5.cpp  vec6.cpp
src/utils/: file.cpp  log.cpp  sdl.cpp  string.cpp
src/window/: window.cpp
tests/: main.cpp
